IGNITE-6730 Java 9: fix project build procedure  * updated startup scripts for Java 8/Java 9 compatibility  * removed temporary solution for UNSAFE compilation under Java 9  * update maven-surefire-plugin in order to run tests under Java 9  * split scala version definition for Java 8 and Java 9 builds respectively  * proposed Java 9 build configuration IGNITE-7144 Java 9: fix build issue with tools.jar not found  * fixed macOS profile name  * added JVM args for Java 8/7 backward compilation compatibility  * added profiles to parent and ignite-tools modules to detect java-9 environment and run parametrised build  * added macOS compatibility for previous java versions